--- a/myCSS.css
+++ b/myCSS.css
@@ -4,15 +4,26 @@ body {
 	margin: 0 auto;
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
 }
+}
+
+a:link {
+     color: #00EB7F;
+}
+a:visited {
+     color: #EB0069;
+}
+a:hover, a:active, a:focus { 
+     text-decoration: underline;
+}
 .homePage {
-	background: #4DFFC1;
+	background: #EBC500;
 }
 .container {
 	width: 960px;
 	margin: 0 auto;
 }
 .header {
-	background: #4DEAFF;
+	background: #74FF38;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -22,7 +33,7 @@ body {
 	
 }
 .nav {
-	background: #57E6E1;
+	background: #6EF035;
 	margin: 0px;
 	padding: 5;
 	float: left;
@@ -38,7 +49,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #46ACEB;
+	background: #3FA314;
 	margin: 0px;
 	float: left;
 	width: 100%;
