--- a/myCSS.css
+++ b/myCSS.css
@@ -16,7 +16,7 @@ a:hover, a:active, a:focus {
      text-decoration: underline;
 }
 .homePage {
-	background: #EBC500;
+	background: #C7FF38;
 }
 .container {
 	width: 960px;
